# AdventOfCode

./: .gitignore  Cargo.toml  README.md  fetch.sh  run.sh
2015/Day1/: Day1.cpp  out
2015/Day2/: Day2.cpp
2015/Day3/: Day3.cpp
2022/Day1/: Day1.cpp  a.cpp  out
src/: lib.rs  main.rs
src/solutions/: mod.rs  template.rs
src/solutions/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  mod.rs
src/solutions/year2016/: day01.rs  day02.rs  day03.rs  mod.rs
src/solutions/year2017/: day01.rs  day02.rs  mod.rs
src/solutions/year2018/: day01.rs  day02.rs  mod.rs
src/solutions/year2019/: day01.rs  day02.rs  mod.rs
src/solutions/year2020/: day01.rs  day02.rs  mod.rs
src/solutions/year2021/: day01.rs  day02.rs
src/solutions/year2022/: day01.rs  day02.rs  mod.rs
src/solutions/year2023/: day01.rs  day02.rs  mod.rs
src/solutions/year2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  mod.rs
src/solutions/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  mod.rs
tests/year2023/: day01.rs
