[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["cookies"] }
dotenv = "0.15.0"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "fetch_input"
path = "bin/fetch_input.rs"
