[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["cookies"] }
dotenv = "0.15.0"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
md5 = "0.7.0"
regex = "1.11.1"

[[bin]]
name = "advent_of_code"
path = "src/main.rs"

[[bin]]
name = "fetch_input"
path = "bin/fetch_input.rs"
test = false

[lib]
doctest = false
